<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_root"
        android:layout_width="250dp"
        android:layout_height="450dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/i_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/t_capitalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/i_logo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/card_item_margin"
                android:layout_marginTop="@dimen/card_item_margin"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:text="@string/capital"
                android:textColor="@color/text_primary"/>

            <TextView
                android:id="@+id/t_capital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/t_capitalTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/t_capitalTitle"
                app:layout_constraintBottom_toBottomOf="@+id/t_capitalTitle"
                android:text=""
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/text_light"
                android:layout_marginHorizontal="@dimen/card_item_margin"/>

            <TextView
                android:id="@+id/t_independent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/t_capitalTitle"
                app:layout_constraintStart_toStartOf="@+id/i_logo"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:text="@string/independent"
                android:textColor="@color/text_primary"
                android:layout_marginStart="@dimen/card_item_margin"/>

            <ImageView
                android:id="@+id/i_independent"
                android:layout_width="18dp"
                android:layout_height="18dp"
                app:layout_constraintTop_toTopOf="@+id/t_independent"
                app:layout_constraintStart_toEndOf="@+id/t_independent"
                app:layout_constraintBottom_toBottomOf="@+id/t_independent"
                android:src="@drawable/ic_check_circle"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/t_populationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/t_independent"
                app:layout_constraintStart_toStartOf="@+id/t_independent"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:text="@string/population"
                android:textColor="@color/text_primary"/>

            <TextView
                android:id="@+id/t_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/t_independent"
                app:layout_constraintStart_toEndOf="@+id/t_populationTitle"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:text="90"
                android:textColor="@color/text_light"/>

            <TextView
                android:id="@+id/t_currencyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/t_populationTitle"
                app:layout_constraintStart_toStartOf="@+id/t_populationTitle"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:text="@string/currency"
                android:textColor="@color/text_primary"/>

            <TextView
                android:id="@+id/t_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/t_currencyTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/t_currencyTitle"
                app:layout_constraintBottom_toBottomOf="@+id/t_currencyTitle"
                android:text=""
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/text_light"
                android:layout_marginHorizontal="@dimen/card_item_margin"/>

            <TextView
                android:id="@+id/t_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="start"
                android:textColor="@color/text_primary"
                android:fontFamily="@font/poppins_extrabold"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/t_currency"
                app:layout_constraintStart_toStartOf="@+id/t_independent"
                app:layout_constraintEnd_toEndOf="@id/t_currency"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>